Fix user profile text wrapping in IE/Edge

--- a/styles/_mixins.scss
+++ b/styles/_mixins.scss
@@ -33,6 +33,7 @@
   -ms-hyphens: auto;
   -webkit-hyphens: auto;
   word-break: break-word;
+  word-wrap: break-word; //IE/Edge compatibility
 }
 
 @mixin content-body {
